# V9.1.2_phase3_polars_microstructure

v900/: PATCH_NOTES_V9_1_1.md  PATCH_NOTES_V9_1_2.md  PATCH_NOTES_V9_1_2_PHASE2.md  PATCH_NOTES_V9_1_2_PHASE3.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
v900/.github/workflows/: ci.yml
v900/binance_quant_builder/: accelerated.py  api.py  cli.py  config.py  downloader.py  errors.py  exporter.py  ids.py  manifests.py  merge.py  models.py  observability.py  processor.py  quality_gates.py  rate_limiter.py  runtime.py  schema_contracts.py  validate.py
v900/binance_quant_builder/features/: microstructure.py
v900/binance_quant_builder/labels/: triple_barrier.py
v900/configs/: base.yaml  dev.yaml  prod.yaml  staging.yaml
v900/docs/: operations.md  output_columns.md
v900/scripts/: benchmark_phase3.py  quality_check.py
v900/tests/: test_accelerated.py  test_accelerated_microstructure.py  test_cli_smoke.py  test_config.py  test_downloader_pagination.py  test_e2e_phase2.py  test_e2e_phase3.py  test_e2e_small_symbol.py  test_io.py  test_legacy_rate_backend.py  test_merge.py  test_microstructure.py  test_nan_report.py  test_native_pipeline.py  test_native_plan.py  test_native_sidecars.py  test_numeric.py  test_preprod_contracts.py  test_processor_bridge.py  test_rate_limiter.py  test_runtime_retry.py  test_stage_lineage.py  test_time.py  test_triple_barrier.py  test_v912_regressions.py  test_validate.py  test_validate_v830.py
v900/tmp_empty/: raw.csv
v900/tmp_numts/: native_features.csv  raw.csv
(+6 files in other folders)
