[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-quant-builder"
version = "9.1.2"
description = "Preprod Binance quant dataset builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "typer>=0.12",
]


[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
redis = ["redis>=5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6.0", "build>=1.2.1"]
parquet = ["pyarrow>=15.0"]
polars = ["polars>=1.14"]

[project.scripts]
binance-quant-builder = "binance_quant_builder.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["binance_quant_builder*"]
exclude = ["tests*", "output*", "configs*", "tmp_empty*", "tmp_numts*"]
